--- a/index.html
+++ b/index.html
@@ -727,20 +727,20 @@
         </div>
         <div aria-label="trainer-poks" role="region">
             <fieldset class="poke-info" id="trainer-mons">
-                <legend align="center">TEAM/BOX</legend>
+                <legend align="center">Team/Box</legend>
                 <div>
-                    <legend class="dropzone" align="center">TEAM</legend>
+                    <legend class="dropzone" align="center">Team</legend>
                     <div id="team-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <hr>
                 <div>
-                    <legend class="dropzone" align="center">BOX</legend>
+                    <legend class="dropzone" align="center">Box</legend>
                     <div id="box-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <div>
-                    <legend class="dropzone" align="center">BOX 2</legend>
+                    <legend class="dropzone" align="center">Box 2</legend>
                     <div id="box-poke-list2" class="box-poke dropzone">
                     </div>
                 </div>
@@ -750,7 +750,7 @@
                     <button id="show-cc">Show</button>
                     <button id="hide-cc" hidden>Hide</button>
                     <button id="refr-cc" hidden>Refresh</button>
-                    <button id="info-cc" hidden>Colors Explanation</button>
+                    <button id="info-cc" hidden>Color Code Explanation</button>
                     <div id="info-cc-field" class="info-paragraph" hidden>
                         <h5>Speed Borders</h5>
                         <b class="mon-speed-F">Blue</b> Outspeeds
@@ -789,12 +789,12 @@
                 </div>
                 <hr>
                 <div>
-                    <legend class="dropzone" align="center">TRASH ZONE</legend>
+                    <legend class="dropzone" align="center">Trash</legend>
                     <div id="trash-box" class="box-poke dropzone" data-placeholder="">
                         
                     </div>
-                    <button class="deadzone" id="trash-pok">Remove pokemon in the Trash</button>
-                    <button class="deadzone" id="clearSets">Remove all pokemons from all boxes</button>
+                    <button class="deadzone" id="trash-pok">Remove Pokémon from the trash</button>
+                    <button class="deadzone" id="clearSets">Remove Pokémon from all boxes</button>
                 </div>
             </fieldset>
         </div>
@@ -1894,9 +1894,9 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?98d09064"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?89ed3199"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?0a0407ae"></script>
-    <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
+    <script type="text/javascript" src="./js/moveset_import.js?4bc049be"></script>
 </div>
 
 <div class="credits">Modification by ForwardFeed Originaly Created by Honko, maintained by Austin and Kris, Special thanks to Hzla
@@ -1905,7 +1905,7 @@
         <br>
         <li><a href="https://github.com/smogon/damage-calc/contributors" class="links-lighten" target="_blank">Smogon Contributors</a></li>
         <li><a href="https://www.smogon.com/forums/threads/pok%C3%A9mon-showdown-damage-calculator.3593546/" class="links-lighten" target="_blank">Smogon Bug Reports</a></li>
-        <li><a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">Smogong qGitHub repository</a></li>
+        <li><a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">Smogon GitHub repository</a></li>
     </ul>
     <div id="sets">
         <button type="button" id="dark-theme-toggle"></button>
